test/error/MethodParamDefaultTypeMismatch.fu
public static class Test
{
	public static void Run(int x = 5.0) //ERROR: Cannot convert 'double' to 'int'
	{
	}
}
